backend/errors_logs2.txt
Traceback (most recent call last):
  File "/home/mica/Desktop/pegasus/backend/main.py", line 4, in <module>
    from api import chat_router, webhook_router, audio_router, game_router, chat_router_v2
  File "/home/mica/Desktop/pegasus/backend/api/chat_router_v2.py", line 11, in <module>
    from services.chat_orchestrator_factory import get_default_chat_orchestrator
  File "/home/mica/Desktop/pegasus/backend/services/chat_orchestrator_factory.py", line 5, in <module>
    from services.chat_orchestrator_v2 import ChatOrchestratorV2, ChatConfig, ConversationMode, ResponseStyle
  File "/home/mica/Desktop/pegasus/backend/services/chat_orchestrator_v2.py", line 10, in <module>
    from services.context_aggregator_v2 import ContextAggregatorV2, AggregatedContext, AggregationConfig, AggregationStrategy
  File "/home/mica/Desktop/pegasus/backend/services/context_aggregator_v2.py", line 9, in <module>
    from services.retrieval.chromadb_retriever import ChromaDBRetriever
  File "/home/mica/Desktop/pegasus/backend/services/retrieval/__init__.py", line 4, in <module>
    from .neo4j_retriever import Neo4jRetriever
  File "/home/mica/Desktop/pegasus/backend/services/retrieval/neo4j_retriever.py", line 219
    count{(c)-[:MENTIONS]->()} as entity_count,
             ^
SyntaxError: f-string: expecting '=', or '!', or ':', or '}'
